[package]
name = "freedom-config"
version = "1.0.0"
edition = "2021"
authors = ["Caleb Leinz <caleb.leinz@atlasspace.com>"]
description = "ATLAS Freedom Configuration"
readme = "README.md"
repository = "https://github.com/ATLAS-Space-Operations/rust-freedom-config"

[dependencies]
url = { version = "2.5.0" }

# Optional dependencies
serde = { version = "1.0.195", features = ["derive"], optional = true }

[dev-dependencies]
test-case = "3.3.1"

[features]
serde = ["dep:serde"]
