[package]
name = "freedom-config"
version = "1.0.0"
edition = "2021"
authors = ["Caleb Leinz <caleb.leinz@atlasspace.com>"]
description = "ATLAS Freedom Configuration"
readme = "README.md"
repository = "https://github.com/ATLAS-Space-Operations/rust-freedom-config"
publish = ["atlasspace-rust"]

[dependencies]
url = { version = "2.5.0" }

# Optional dependencies
serde = { version = "1.0.195", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
